--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ authors = ["DeltaChat Contributors", "Simon Laux"]
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 schemars = "0.8.11"
+
+[dev-dependencies]
+anyhow = "1.0.71"
