--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 authors = ["DeltaChat Contributors", "Simon Laux"]
+repository = "https://github.com/deltachat/openrpc_type/"
 exclude = [
     ".github",
     "example_files",
